# ChangeLog for app-text/djvu
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/djvu/ChangeLog,v 1.97 2009/10/28 09:50:48 pva Exp $

  28 Oct 2009; Peter Volkov <pva@gentoo.org> -djvu-3.5.19.ebuild,
  -djvu-3.5.20-r1.ebuild, -djvu-3.5.21.ebuild, djvu-3.5.21_p20090103.ebuild,
  djvu-3.5.22.ebuild:
  Added die after make, thank tove. Drop old.

*djvu-3.5.22 (09 Oct 2009)

  09 Oct 2009; Patrick Lauer <patrick@gentoo.org> +djvu-3.5.22.ebuild:
  Bump to 3.5.22, fixes #287339

  15 Apr 2009; Brent Baude <ranger@gentoo.org> djvu-3.5.21_p20090103.ebuild:
  Marking djvu-3.5.21_p20090103 ppc64 for bug 262776

  10 Apr 2009; Raúl Porcel <armin76@gentoo.org>
  djvu-3.5.21_p20090103.ebuild:
  arm/ia64/s390/sh/sparc stable wrt #262776

  26 Mar 2009; Jeroen Roovers <jer@gentoo.org> djvu-3.5.21_p20090103.ebuild:
  Stable for HPPA (bug #262776).

  20 Mar 2009; Markus Meier <maekke@gentoo.org>
  djvu-3.5.21_p20090103.ebuild:
  amd64/x86 stable, bug #262776

  20 Mar 2009; Brent Baude <ranger@gentoo.org> djvu-3.5.21_p20090103.ebuild:
  stable ppc, bug 262776

  18 Mar 2009; Tobias Klausmann <klausman@gentoo.org>
  djvu-3.5.21_p20090103.ebuild:
  Stable on alpha, bug #262776

  17 Mar 2009; Peter Volkov <pva@gentoo.org> djvu-3.5.21_p20090103.ebuild:
  Don't make threads optional as it's debugging feature:
  https://sourceforge.net/tracker/?func=detail&atid=406583&aid=2689112&group
  _id=32953 , fixes bug #250719, thank David Radice for report.

*djvu-3.5.21_p20090103 (20 Jan 2009)

  20 Jan 2009; Peter Volkov <pva@gentoo.org> +djvu-3.5.21_p20090103.ebuild:
  Bump to CVS snapshot as it fixes plugin crash on amd64.

  01 Dec 2008; Brent Baude <ranger@gentoo.org> djvu-3.5.21.ebuild:
  stable ppc64, bug 244258

  22 Nov 2008; Peter Volkov <pva@gentoo.org> djvu-3.5.21.ebuild:
  Added build time libXt dependency for nsplugin, bug #247963, thank Konrad
  Karczewski for report.
