@@ -3,7 +3,7 @@ AUX djvu-3.5.21-parallel-build.patch 2664 RMD160 82b42bc660a02f15f8f71e8ccb164fc
 AUX djvulibre-3.5.17-pthread-flag.patch 2419 RMD160 35f4c484e567ed7a7dcfb51559925ed49ad5db26 SHA1 2c028fd4bff1316a9278bc9047f6595ea3fc1e64 SHA256 e5bd52eba105c7792866f13f5abccf07daca220dc68ac045a4abc431c329805f
 DIST djvulibre-20090103.tar.gz 3043215 RMD160 b639067ac8c1a2b9c7860fef9b75c093bd60a437 SHA1 56f37aac149320df11fa54e2236a68921f06ada3 SHA256 178e50202f086f52a44f6a3ba0e550e4c882d59e1961587e5e2ff62dc270e079
 DIST djvulibre-3.5.22.tar.gz 3027985 RMD160 f74cec88c5fbda28976e64669d3e48833b4dfdcd SHA1 f869d4114052a7df7b8da2d334d124934f1293a6 SHA256 3d9242f98db8f5fc8ca239ccaa91e70c20451fe3b3fa8de6f133e0888f89f0be
-EBUILD djvu-3.5.21_p20090103.ebuild 3109 RMD160 f611c61cb26f3e3f38f66ba2b1323b7bf014a981 SHA1 9979c86c6080d0c211ae1c86af5e06cdcc4da234 SHA256 7b17c7e711722048453c67736f0b95b8ffb83c5ff1033770865c86b1cbb0bc18
-EBUILD djvu-3.5.22.ebuild 3099 RMD160 d957f5a5fde5d30ee210421fba80ab79262f4a2f SHA1 d498aa48e33ebfa5f2dc38c124e611af7f0fa4b4 SHA256 328def35833df340feee7bb0716a50c41f0d13417958619c99b0a2139cf5bd29
-MISC ChangeLog 12678 RMD160 4ca68e8ac3c672adfa9873e5042be7ab3abcf7d2 SHA1 6ca5f934182b1cba4be38b3c14e9755d20ca6b72 SHA256 9e7b985bea5bba7cf7fd2f47bc9cfa802eb565154891005c8c1136d1daa45c57
+EBUILD djvu-3.5.21_p20090103.ebuild 2563 RMD160 63a1f61625c6bc5e6a1f5d73d011b83eaefb9886 SHA1 ad9230f45684248bac1b4d4cf4a20d479feaf6e8 SHA256 6b2e8e736b39cd89b69fb4de4dcf0c315f2a36d2717453cbcc490dc16268ec9a
+EBUILD djvu-3.5.22.ebuild 2559 RMD160 b33ca1f4f263ccb86136661d1132a4c6a45b8fe3 SHA1 1d2cebf4ae717f1b03a4d2a8f18e090b92ad12f9 SHA256 298a56537063451af17a413e66f42da13f6a83a93f123a2e273a2bdb8d9ec069
+MISC ChangeLog 12880 RMD160 f65dfa316e501d0b5bb580c22c05d7936312f9dc SHA1 a233f3cb15997b9681e32a2df97e966a49223070 SHA256 eabdee578e0bc58b15a3a7c369abbc45879a4a1b4ed8dad1351b8c1f233331f5
 MISC metadata.xml 865 RMD160 09cb90b4680856217c680e395e15957263c01472 SHA1 35e8a38a7dbed0d7f547cf21fa5bbb0133591e3d SHA256 13f4ad340f245deb6b5ba0d5ecfd5fe5aa408ff8ef9b2fe37a2f63ffc793c672
