@@ -1,6 +1,11 @@
 # ChangeLog for app-text/djvu
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/djvu/ChangeLog,v 1.97 2009/10/28 09:50:48 pva Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-text/djvu/ChangeLog,v 1.98 2010/01/05 03:08:54 yngwin Exp $
+
+  05 Jan 2010; Ben de Groot <yngwin@gentoo.org>
+  djvu-3.5.21_p20090103.ebuild, djvu-3.5.22.ebuild:
+  Drop Qt3 support, bug 283429. Use app-text/djview4 instead of old bundled
+  djview, bug 298293.
 
   28 Oct 2009; Peter Volkov <pva@gentoo.org> -djvu-3.5.19.ebuild,
   -djvu-3.5.20-r1.ebuild, -djvu-3.5.21.ebuild, djvu-3.5.21_p20090103.ebuild,
